# routes/api.php
@@ -18,3 +18,5 @@ Route::apiResource('projects', \App\Http\Controllers\ProjectController::class);
 Route::apiResource('projects.tutorials', \App\Http\Controllers\TutorialsController::class)->shallow();
 Route::apiResource('tutorials.steps', \App\Http\Controllers\StepsController::class)->shallow();
 Route::apiResource('projects.articles', \App\Http\Controllers\ArticleController::class)->shallow();
+
+Route::post('tutorials/{tutorial}/steps-many', [\App\Http\Controllers\StepsController::class, 'stepsMany']);
